--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "lib-flexible": "^0.3.2",
+    "postcss-px2rem-exclude": "^0.0.6",
+    "vant": "^2.12.54",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
